Add React adapter to Fractal instance (#3)
* Updates

* New files

* Cleanup, switch back to regular react adapter

* Remove outdated packages, use yarn

* Remove unused file

* Actual cleanup

* remove last loader

* Remove file, clear cache in adapter

* Add babelrc back

* Add autodoc

* Keep from breaking other output

* Better org for prop generation

* Move things around, working webpack thingy

* Remove old webpack adapter

--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
     "@frctl/fractal": "^1.1.5",
     "@frctl/mandelbrot": "^1.1.0",
     "@frctl/nunjucks": "^1.0.3",
+    "babel-loader": "^7.1.2",
     "foundation-sites": "^6.4.1",
     "nunjucks": "^3.0.1",
-    "uswds": "^1.2.1"
+    "react-docgen": "^2.19.0",
+    "uswds": "^1.2.1",
+    "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "classnames": "^2.2.5",
+    "node-sass": "^4.5.3",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   }
 }
