Add repository and files to package.json, remove some test code

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "vets.gov-design-system",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/department-of-veterans-affairs/design-system.git"
+  },
+  "files": [
+    "src/components/modal/Modal.js"
+  ],
   "dependencies": {
-    "@frctl/fractal": "^1.1.5",
+    "@frctl/fractal": "^1.1.7",
     "@frctl/mandelbrot": "^1.1.0",
     "@frctl/nunjucks": "^1.0.3",
     "babel-loader": "^7.1.2",
