--- a/src/components/modal/modal.config.yml
+++ b/src/components/modal/modal.config.yml
@@ -2,7 +2,7 @@ label: Modal
 status: wip
 
 context:
-  componentSourcePath: 'Modal.js'
+  componentSourcePath: 'Modal.jsx'
   id: default
   title: 'Default Modal'
   content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.'
