--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.5",
+    "lodash": "^4.5.1",
     "mocha": "^4.0.1",
     "node-sass": "^4.6.0",
     "nunjucks": "^3.0.1",
