Add scss file and rename component file to jsx

--- a/src/components/segmented_progress_bar/segmented_progress_bar.config.yaml
+++ b/src/components/segmented_progress_bar/segmented_progress_bar.config.yaml
@@ -2,7 +2,7 @@ label: Segmented progress bar
 status: wip
 
 context:
-  componentSourcePath: 'SegmentedProgressBar.js'
+  componentSourcePath: 'SegmentedProgressBar.jsx'
   id: default
   current: 4
   total: 6
