Set up errorable checkbox

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "export-components": "node src/js/export-components.js",
     "start": "fractal start --sync",
     "test": "karma start --single-run",
+    "test:watch": "karma start --auto-watch",
     "lint:js": "eslint --quiet --ext .js --ext .jsx .",
     "test-debug": "karma start --browsers Chrome"
   },
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "classnames": "^2.2.5",
     "font-awesome": "4",
     "foundation-sites": "5",
