--- a/src/components/tooltip/tooltip.config.yml
+++ b/src/components/tooltip/tooltip.config.yml
@@ -5,4 +5,5 @@ context:
   componentSourcePath: './Tooltip.jsx'
   id: default
   title: 'Tooltip'
-  content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.'
+  toolTipText: 'Tooltip text'
+
