--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-webpack": "^2.0.5",
     "lodash": "^4.5.1",
     "mocha": "^4.0.1",
+    "ncp": "^2.0.0",
     "node-sass": "^4.6.0",
     "nunjucks": "^3.0.1",
     "react": "^15.6.2",
