--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "font-awesome": "4",
     "foundation-sites": "5",
     "prop-types": "^15.6.0",
+    "react-transition-group": "^1.1.2",
     "uswds": "^1.2.1"
   },
   "devDependencies": {
