--- a/src/components/07-form/controls/ProgressButton/ProgressButton.config.yml
+++ b/src/components/07-form/controls/ProgressButton/ProgressButton.config.yml
@@ -3,9 +3,9 @@ status: wip
 
 context:
   componentSourcePath: './ProgressButton.jsx'
-  buttonText: "Progress Button"
-  buttonClass: "usa-button-primary"
-  beforeText: "«"
-  afterText: "»"
+  buttonText: Progress Button
+  buttonClass: usa-button-primary
+  beforeText: «
+  afterText: »
   disabled: PropTypes.bool
   submitButton: PropTypes.bool
