added tests to systemviewdown and cleared a bunch of linter errors across other files.

--- a/src/components/tooltip/tooltip.config.yml
+++ b/src/components/tooltip/tooltip.config.yml
@@ -2,7 +2,7 @@ label: Tooltip
 status: wip
 
 context:
-  componentSourcePath: './tooltip.jsx'
+  componentSourcePath: './Tooltip.jsx'
   id: default
   title: 'Tooltip'
   open: false
