add npm module publishing (#48)
* add npm module publishing

* update readme

* fix typo

* update imports for helpers folder

* update instructions to use yalc link

* add additional yalc instructions

* reorganize package json, update readme with patch instructions, add comments to node module script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vets.gov-design-system",
+  "name": "@department-of-veteran-affairs/jean-pants",
   "version": "0.1.0",
+  "license": "CC0-1.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/department-of-veterans-affairs/design-system.git"
@@ -8,10 +10,11 @@
   "main": "dist/js/components",
   "scripts": {
     "prestart": "node prebuild.js",
-    "export-components": "node src/js/export-components.js",
+    "export-components": "node ./scripts/build-node-modules.js",
     "start": "fractal watch",
     "test": "karma start --single-run",
     "site": "fractal build-site && gh-pages -d build",
+    "test-publish": "cp package.json dist/jean-pants/package.json && cd dist/jean-pants && yalc publish && cd ../../",
     "test-watch": "karma start --auto-watch",
     "lint:js": "eslint --quiet --ext .js --ext .jsx .",
     "test-debug": "karma start --browsers Chrome"
@@ -20,7 +23,11 @@
     "classnames": "^2.2.5",
     "font-awesome": "4",
     "foundation-sites": "5",
+    "lodash": "^4.5.1",
     "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-transition-group": "1.x",
     "uswds": "^1.2.1"
   },
   "devDependencies": {
@@ -37,6 +44,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "colors": "^1.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.4",
@@ -47,21 +55,22 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "2",
     "gh-pages": "^1.1.0",
+    "glob": "^7.1.2",
     "karma": "1.6",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.5",
-    "lodash": "^4.5.1",
+    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.6.0",
     "nunjucks": "^3.0.1",
-    "react": "^15.6.2",
+    "promisify-node": "^0.4.0",
     "react-docgen": "^2.19.0",
-    "react-dom": "^15.6.2",
     "react-test-renderer": "^15.5.0",
-    "react-transition-group": "1.x",
+    "recast": "^0.14.4",
     "resolve-url-loader": "^2.2.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
