--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "vets.gov-design-system",
   "name": "@department-of-veteran-affairs/jean-pants",
   "version": "0.1.0",
   "license": "CC0-1.0",
@@ -27,6 +26,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-scroll": "^1.7.7",
     "react-transition-group": "1.x",
     "uswds": "^1.2.1"
   },
