--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "eslint-plugin-jsx-a11y": "5.1",
+    "eslint-plugin-react": "7.2.1",
     "font-awesome": "4",
     "foundation-sites": "5",
     "lodash": "^4.5.1",
@@ -45,11 +47,9 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.4",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint": "4.4.1",
+    "eslint-config-airbnb": "15.1",
+    "eslint-plugin-import": "^2.9.0",
     "extract-text-webpack-plugin": "2",
     "gh-pages": "^1.1.0",
     "glob": "^7.1.2",
