Fix gh io paths

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "export-components": "node ./scripts/build-node-modules.js",
     "start": "fractal watch",
     "test": "karma start --single-run",
+    "build-site": "fractal build-site",
     "site": "fractal build-site && gh-pages -d build",
     "test-publish": "cp package.json dist/jean-pants/package.json && cd dist/jean-pants && yalc publish && cd ../../",
     "test-watch": "karma start --auto-watch",
@@ -20,8 +21,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "eslint-plugin-jsx-a11y": "5.1",
-    "eslint-plugin-react": "7.2.1",
     "font-awesome": "4",
     "foundation-sites": "5",
     "lodash": "^4.5.1",
@@ -50,6 +49,8 @@
     "eslint": "4.4.1",
     "eslint-config-airbnb": "15.1",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "5.1",
+    "eslint-plugin-react": "7.2.1",
     "extract-text-webpack-plugin": "2",
     "gh-pages": "^1.1.0",
     "glob": "^7.1.2",
