--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.2.5",
     "font-awesome": "4",
     "foundation-sites": "5",
+    "is-docker": "^1.1.0",
     "lodash": "^4.5.1",
     "prop-types": "^15.6.0",
     "react-transition-group": "^1.x",
