throwing templating errors; putting a pin in this

--- a/src/components/form/controls/ErrorableFileInput/ErrorableFileInput.config.yml
+++ b/src/components/form/controls/ErrorableFileInput/ErrorableFileInput.config.yml
@@ -3,9 +3,8 @@ status: wip
 
 context:
   componentSourcePath: './ErrorableFileInput.jsx'
-  id: default
-  name: Name
+  name: 'Name'
   multiple: true
-  buttonText: Upload some files
-  accept: String
-  errorMessage: Error message
+  buttonText: 'Upload some files'
+  accept: 'String'
+  errorMessage: 'Error message'
