--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "foundation-sites": "5",
     "is-docker": "^1.1.0",
     "lodash": "^4.5.1",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.0",
     "react-transition-group": "^1.x",
     "uswds": "^1.5.0"
