--- a/src/components/SortableTable/SortableTable.config.yml
+++ b/src/components/SortableTable/SortableTable.config.yml
@@ -3,7 +3,7 @@ status: wip
 
 context:
   componentSourcePath: 'SortableTable.jsx'
-  className:
+  className: 'va-table'
   currentSort:
     value: 'String'
     order: ASC
@@ -13,13 +13,25 @@ context:
       value: '1' },
     {
       label: 'Label 2',
-      value: '2' }]
+      value: '2' },
+    {
+      label: 'Label 3',
+      value: '3' }]
   data: [
     {
       id: 1,
+      values: [1, 2, 3],
       rowClass: 'class'
     },
     {
       id: 2,
+      values: [1, 2, 3],
+      rowClass: 'class'
+    },
+    {
+      id: 3,
+      values: [1, 2, 3],
       rowClass: 'class'
     }]
+
+// what are {rows} in the -->
