--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "moment": "^2.21.0",
     "prop-types": "^15.6.0",
     "react-transition-group": "^1.x",
-    "uswds": "^1.5.0"
+    "uswds": "^1.5.0",
+    "window-or-global": "^1.0.1"
   },
   "devDependencies": {
     "@frctl/fractal": "^1.1.7",
