help menu renders

--- a/src/components/header/HelpMenu/HelpMenu.config.yml
+++ b/src/components/header/HelpMenu/HelpMenu.config.yml
@@ -4,5 +4,5 @@ status: wip
 context:
   componentSourcePath: 'HelpMenu.jsx'
   id: default
-  cssClass: 'va-dropdown',
+  cssClass: 'va-dropdown'
   isOpen: true
