tweaking of display for header components

--- a/src/components/header/SearchMenu/SearchMenu.config.yml
+++ b/src/components/header/SearchMenu/SearchMenu.config.yml
@@ -1,5 +1,8 @@
 label: Search Menu
 status: wip
+preview: '@uswds'
+display:
+  max-width: 330px
 
 context:
   componentSourcePath: 'SearchMenu.jsx'
