--- a/src/components/navigation/sidenav/sidenav.config.yml
+++ b/src/components/navigation/sidenav/sidenav.config.yml
@@ -1,6 +1,9 @@
 label: Side navigation
 status: ready
 handle: sidenav
+preview: '@uswds-framed'
+display:
+  max-width: 150px;
 
 context:
   sidenav:
