--- a/src/components/form/controls/ErrorableSelect/ErrorableSelect.config.yml
+++ b/src/components/form/controls/ErrorableSelect/ErrorableSelect.config.yml
@@ -4,6 +4,7 @@ status: wip
 context:
   componentSourcePath: './ErrorableSelect.jsx'
   errorMessage: "This is the error message"
+  label: 'select label'
   name: "Attribute name"
   options: ['first option', 'second option', 'third option']
   required: true
