added modal variations explicitly; tried to do it through config but it broke _everything._

--- a/src/components/WarningModal/WarningModal.config.yml
+++ b/src/components/WarningModal/WarningModal.config.yml
@@ -1,10 +1,10 @@
-label: Modal
+label: Warning Modal
 status: wip
-order: 10
+order: 13
 
 context:
   componentSourcePath: 'Modal.jsx'
   id: default
-  title: 'Default Modal'
-  status: ''
+  title: 'Warning Modal'
+  status: 'warning'
   content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.'
