--- a/src/components/InfoModal/InfoModal.config.yml
+++ b/src/components/InfoModal/InfoModal.config.yml
@@ -1,10 +1,10 @@
-label: Modal
+label: Info Modal
 status: wip
-order: 10
+order: 11
 
 context:
   componentSourcePath: 'Modal.jsx'
   id: default
-  title: 'Default Modal'
-  status: ''
+  title: 'Info Modal'
+  status: 'info'
   content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.'
