--- a/src/components/SuccessModal/SuccessModal.config.yml
+++ b/src/components/SuccessModal/SuccessModal.config.yml
@@ -1,10 +1,10 @@
-label: Modal
+label: Success Modal
 status: wip
-order: 10
+order: 12
 
 context:
   componentSourcePath: 'Modal.jsx'
   id: default
-  title: 'Default Modal'
-  status: ''
+  title: 'Success Modal'
+  status: 'success'
   content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.'
