Missed color palette var (#120)

--- a/src/components/colors/colors.config.yml
+++ b/src/components/colors/colors.config.yml
@@ -36,7 +36,7 @@ context:
     color:
     - var: color-primary
       name: "$color-primary"
-      hex: "#0071bc"
+      hex: "#0071bb"
       contrast: AA
     - var: color-primary-darker
       name: "$color-primary-darker"
