--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation",
-  "version": "0.8.0",
+  "version": "1.0.0",
   "license": "CC0-1.0",
   "repository": {
     "type": "git",
@@ -70,6 +70,7 @@
     "react": "^15.5.4",
     "react-docgen": "^2.19.0",
     "react-dom": "^15.6.2",
+    "react-router": "3",
     "react-scroll": "^1.7.7",
     "react-test-renderer": "^15.5.0",
     "recast": "^0.14.4",
