revert back to working version of MegaMenu

--- a/src/components/navigation/Megamenu/Megamenu.config.yml
+++ b/src/components/navigation/Megamenu/Megamenu.config.yml
@@ -1,10 +1,5 @@
-label: Megamenu
-status: prototype
-handle: Megamenu
+label: Mega Menu
+status: wip
 
 context:
-  componentSourcePath: './Megamenu.jsx'
-  page: 2
-  pages: 3
-  maxPageListLength: 3
-  showLastPage: true
+  componentSourcePath: './MegaMenu.jsx'
