--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation",
+  "version": "1.5.0",
   "version": "1.4.14",
   "license": "CC0-1.0",
   "repository": {
