--- a/src/components/alerts/AlertBox/AlertBox.config.yml
+++ b/src/components/alerts/AlertBox/AlertBox.config.yml
@@ -3,7 +3,7 @@ status: wip
 
 context:
   componentSourcePath: './AlertBox.jsx'
-  headline: 'Default alert'
+  headline: 'Informational alert'
   content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis.
-  status: warning
+  status: info
   isVisible: true
