Fixed no background image alerts (#194)
* Style tweaks without absolute positioning.

* Retain look of no-background-image alerts.

* 1.10.1

* Updated version in module-readme.

--- a/src/components/colors/colors.config.yml
+++ b/src/components/colors/colors.config.yml
@@ -49,7 +49,7 @@ context:
   - name: Primary Alt
     color:
     - var: color-primary-alt-lightest
-      name: "$color-primary-lightest"
+      name: "$color-primary-alt-lightest"
       hex: "#e1f3f8"
       contrast: AAA
     - var: color-primary-alt-light
