--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation",
-  "version": "1.16.2",
+  "version": "1.17.0",
   "license": "CC0-1.0",
   "repository": {
     "type": "git",
@@ -50,7 +50,7 @@
     "colors": "^1.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.4",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "4.4.1",
     "eslint-config-airbnb": "15.1",
     "eslint-plugin-import": "^2.9.0",
@@ -70,12 +70,12 @@
     "node-sass": "^4.8.3",
     "nunjucks": "^3.0.1",
     "promisify-node": "^0.4.0",
-    "react": "^15.5.4",
+    "react": "^16.7.0",
     "react-docgen": "^2.19.0",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.7.0",
     "react-router": "3",
     "react-scroll": "^1.7.7",
-    "react-test-renderer": "^15.5.0",
+    "react-test-renderer": "^16.7.0",
     "recast": "^0.14.4",
     "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
@@ -88,7 +88,7 @@
     "webpack": "2"
   },
   "peerDependencies": {
-    "react": "^15.5.4",
+    "react": "^15.5.4||^16.7.0",
     "uswds": "^1.4.2"
   }
 }
