--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "font-awesome": "4",
     "foundation-sites": "5",
     "is-docker": "^1.1.0",
     "lodash": "^4.5.1",
@@ -32,6 +31,7 @@
     "window-or-global": "^1.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@frctl/fractal": "^1.1.7",
     "@frctl/mandelbrot": "^1.2.0",
     "@frctl/nunjucks": "^1.0.3",
