--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation",
-  "version": "2.0.0-fa",
+  "version": "2.0.0",
   "license": "CC0-1.0",
   "repository": {
     "type": "git",
