Update release process documentation and bump version (#225)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:js": "lerna run lint",
     "build": "lerna run build",
     "publish": "lerna publish",
+    "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
     "test-watch": "lerna run test-watch --scope=@department-of-veterans-affairs/formation-react"
   },
