Font Awesome - Adds Brand, Regular icon sets (#227)
* added class in core.scss to recognize brand icons

* added Font Awesome 5 brands font files

* Clean up code

* switch to fas

* Move fa override to full.scss

* More patches

* add another beta fa version

* Add -FA to veresion

* Move FA to peer dependency

* Account for large SVGs as part of FA

* increment alpha version

* move back to regular dependencies

* Move back to peerDependencies

* increment alpha

* rm svg from loader

* switch modal to far

* increment alpha

* increment version

* Revert "switch modal to far"

This reverts commit d7db82661bb73710783f2ef082cdedafa8089f7b.

* increment version

* Also have peers in dependencies

* rm duplicate font weight

--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "The VA design system",
   "keywords": [
     "va",
@@ -29,6 +29,8 @@
     "moment": "^2.23.0"
   },
   "peerDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "foundation-sites": "5",
     "uswds": "^1.4.2"
   }
 }
