--- a/packages/gatsby-documentation/package.json
+++ b/packages/gatsby-documentation/package.json
@@ -26,6 +26,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-live": "^1.12.0",
     "uswds": "1.4.2"
   },
   "keywords": [
