--- a/.eslintrc
+++ b/.eslintrc
@@ -90,6 +90,7 @@
     'global-require': 0,
     'no-lonely-if': 0,
     'lines-around-directive': 0,
+    "jsx-a11y/href-no-hash": 0,
   },
   'overrides': [{
     'files': ["**/*.unit.spec.jsx", "**/*.unit.spec.js"],
