--- a/packages/gatsby-documentation/package.json
+++ b/packages/gatsby-documentation/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "vagov-documentation",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Developer Document Site for VA.gov",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@department-of-veterans-affairs/formation": "^1.18.0",
     "@mdx-js/mdx": "^0.16.6",
