--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "lerna run lint",
     "lint:js": "lerna run lint",
     "build": "lerna run build",
+    "deploy": "lerna run deploy --scope=vagov-documentation",
     "publish": "lerna publish",
     "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
