--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-remark-graph": "^0.2.2",
     "gatsby-remark-images": "^3.0.3",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
