--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "lerna bootstrap",
     "lint": "lerna run lint",
     "lint:js": "lerna run lint",
+    "lint:js:fix": "lerna run lint:js:fix",
     "build": "lerna run build",
     "deploy": "lerna run deploy --scope=vagov-documentation",
     "publish": "lerna publish",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "5.1",
     "eslint-plugin-react": "7.2.1",
+    "eslint-plugin-va-enzyme": "./scripts/custom-eslint/va-enzyme",
     "extract-text-webpack-plugin": "2",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
@@ -72,5 +74,12 @@
     "url-loader": "^0.6.2",
     "uswds": "1.4.2",
     "webpack": "2"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.4"
   }
 }
