add linting scripts and remove package eslintrc

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "prebootstrap": "node prebuild.js",
     "test": "lerna run test",
     "bootstrap": "lerna bootstrap",
-    "lint": "lerna run lint",
-    "lint:js": "lerna run lint",
-    "lint:js:fix": "lerna run lint:js:fix",
+    "lint": "npm run lint:js",
+    "lint:changed": "npm run lint:js:changed && npm run lint:sass",
+    "lint:js": "eslint --quiet --ext .js --ext .jsx .",
+    "lint:js:fix": "eslint --fix --quiet --ext .js --ext .jsx .",
+    "lint:js:changed": "LIST=`git diff-index --name-only HEAD | grep \"\\.js[x]\\{0,1\\}$\"`; if [ \"$LIST\" ]; then eslint --quiet $LIST; fi",
+    "lint:js:changed:fix": "LIST=`git diff-index --name-only HEAD | grep \"\\.js[x]\\{0,1\\}$\"`; if [ \"$LIST\" ]; then eslint --fix --quiet $LIST; fi",
     "build": "lerna run build",
     "deploy": "lerna run deploy --scope=vagov-documentation",
     "publish": "lerna publish",
