--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "4.4.1",
     "eslint-config-airbnb": "15.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-jsx-a11y": "5.1",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "7.2.1",
     "eslint-plugin-va-enzyme": "./scripts/custom-eslint/va-enzyme",
     "extract-text-webpack-plugin": "2",
@@ -60,6 +64,7 @@
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.8.3",
+    "prettier": "^1.16.4",
     "promisify-node": "^0.4.0",
     "react": "^16.7.0",
     "react-docgen": "^2.19.0",
@@ -77,12 +82,5 @@
     "url-loader": "^0.6.2",
     "uswds": "1.4.2",
     "webpack": "2"
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-jest": "^22.3.0",
-    "eslint-plugin-mocha": "^5.3.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
   }
 }
