--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prebootstrap": "node prebuild.js",
     "test": "lerna run test",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap --npm-client=yarn --force-local",
     "build": "lerna run build",
     "deploy": "lerna run deploy --scope=vagov-documentation",
     "publish": "lerna publish",
