--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -41,13 +41,14 @@
     "build": "if [ -z \"$GITHUB_API_KEY\" ]; then echo \"No API key, skipping doc build\"; else gatsby build; fi",
     "deploy": "if [ -z \"$GITHUB_API_KEY\" ]; then echo \"No API key, skipping doc build\"; else gatsby build --prefix-paths && gh-pages -d public -e .; fi",
     "develop": "gatsby develop",
+    "lint": "npx vagov-eslint lint:js",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
     "develop:inspect": "node --inspect --no-lazy node_modules/gatsby/dist/bin/gatsby develop"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "vagov-eslint": "file:../vagov-eslint"
   },
   "repository": {
     "type": "git",
