--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -17,7 +17,6 @@
   },
   "scripts": {
     "build": "node ./scripts/build.js",
-    "lint": "npx vagov-eslint lint:js",
     "test-watch": "karma start testing/karma.conf.js --auto-watch",
     "test": "karma start testing/karma.conf.js --single-run",
     "test-debug": "karma start testing/karma.conf.js --browsers Chrome"
@@ -30,8 +29,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
-    "react-transition-group": "1",
-    "vagov-eslint": "file:../vagov-eslint"
+    "react-transition-group": "1"
   },
   "peerDependencies": {
     "@department-of-veterans-affairs/formation": "^5.4.0",
