--- a/packages/vagov-eslint/package.json
+++ b/packages/vagov-eslint/package.json
@@ -16,7 +16,9 @@
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "7.2.1",
         "eslint-plugin-va-enzyme": "file:./custom-eslint/va-enzyme",
-        "prettier": "^1.16.4"
+        "prettier": "^1.16.4",
+        "shelljs": "0.8.3",
+        "window-or-global": "^1.0.1"
     },
     "scripts": {
         "postinstall" : "cp .eslintrc $INIT_CWD && cp .eslintignore $INIT_CWD"
