--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build": "lerna run build",
     "deploy": "lerna run deploy --scope=vagov-documentation",
     "lint": "npx vagov-eslint lint:js",
-    "lint:changed": "npx run lint:js:changed",
-    "lint:js": "npm run lint",
-    "lint:js:fix": "npx run vagov-lint lint:js:fix",
-    "lint:js:changed": "npx run vagov-lint lint:js:changed",
-    "lint:js:changed:fix": "npx run vagov-lint lint:js:changed:fix",
+    "lint:changed": "npx vagov-eslint lint:js:changed",
+    "lint:js": "npx vagov-eslint lint",
+    "lint:js:fix": "npx vagov-lint lint:js:fix",
+    "lint:js:changed": "npx vagov-lint lint:js:changed",
+    "lint:js:changed:fix": "npx vagov-lint lint:js:changed:fix",
     "publish": "lerna publish",
     "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
