--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lint": "npx vagov-eslint lint:js",
     "lint:changed": "npx vagov-eslint lint:js:changed",
     "lint:js": "npx vagov-eslint lint",
-    "lint:js:fix": "npx vagov-lint lint:js:fix",
-    "lint:js:changed": "npx vagov-lint lint:js:changed",
-    "lint:js:changed:fix": "npx vagov-lint lint:js:changed:fix",
+    "lint:js:fix": "npx vagov-eslint lint:js:fix",
+    "lint:js:changed": "npx vagov-eslint lint:js:changed",
+    "lint:js:changed:fix": "npx vagov-eslint lint:js:changed:fix",
     "publish": "lerna publish",
     "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
