--- a/packages/vagov-eslint/package.json
+++ b/packages/vagov-eslint/package.json
@@ -7,20 +7,23 @@
     },
     "dependencies": {
         "eslint": "4.4.1",
-        "eslint-config-airbnb": "15.1",
-        "eslint-config-prettier": "^4.1.0",
-        "eslint-plugin-import": "^2.9.0",
-        "eslint-plugin-jest": "^22.3.0",
+        "eslint-config-airbnb": "^15.1.0",
+        "eslint-config-prettier": "^3.1.0",
+        "eslint-import-resolver-babel-module": "^5.0.1",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jest": "^21.26.1",
         "eslint-plugin-jsx-a11y": "5.1",
-        "eslint-plugin-mocha": "^5.3.0",
-        "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "7.2.1",
+        "eslint-plugin-mocha": "^5.2.0",
+        "eslint-plugin-no-unsafe-innerhtml": "^1.0.14",
+        "eslint-plugin-prettier": "^2.6.2",
+        "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-scanjs-rules": "^0.1.4",
         "eslint-plugin-va-enzyme": "file:./custom-eslint/va-enzyme",
         "prettier": "^1.16.4",
         "shelljs": "0.8.3",
         "window-or-global": "^1.0.1"
     },
     "scripts": {
-        "postinstall" : "cp .eslintrc $INIT_CWD && cp .eslintignore $INIT_CWD"
+        "postinstall" : "cp .eslintrc $INIT_CWD && cp .eslintignore $INIT_CWD && cp .prettierrc $INIT_CWD"
     }
 }
