--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-live": "^1.12.0",
-    "uswds": "1.4.2"
+    "uswds": "1.4.2",
+    "vagov-eslint": "1.0.0"
   },
   "keywords": [
     "gatsby"
