move linting into packages; update script to error

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -32,6 +32,8 @@
     "react-helmet": "^5.2.0",
     "react-live": "^1.12.0",
     "uswds": "1.4.2",
+  },
+  "devDependencies": {
     "vagov-eslint": "1.0.0"
   },
   "keywords": [
