--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "build": "node ./scripts/build.js",
+    "lint": "yarn vagov-eslint lint:js",
     "test-watch": "karma start testing/karma.conf.js --auto-watch",
     "test": "karma start testing/karma.conf.js --single-run",
     "test-debug": "karma start testing/karma.conf.js --browsers Chrome"
@@ -30,6 +31,9 @@
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "react-transition-group": "1"
+  },
+  "devDependencies": {
+    "vagov-eslint": "1.0.0"
   },
   "peerDependencies": {
     "@department-of-veterans-affairs/formation": "^5.4.0",
