--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "foundation-sites": "5",
-    "moment": "^2.23.0"
+    "moment": "^2.23.0",
+    "rimraf": "^2.6.3"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
