upgrade webpack 4, restore build script

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "extract-text-webpack-plugin": "2",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "is-docker": "^1.1.0",
@@ -52,6 +51,7 @@
     "karma-webpack": "^2.0.5",
     "lerna": "^3.10.5",
     "mkdirp": "^0.5.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.8.3",
