--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "clean-webpack-plugin": "^2.0.1",
     "colors": "^1.1.2",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -50,8 +52,8 @@
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.5",
     "lerna": "^3.10.5",
-    "mkdirp": "^0.5.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.8.3",
@@ -64,7 +66,6 @@
     "react-test-renderer": "^16.7.0",
     "recast": "^0.14.4",
     "resolve-url-loader": "^2.2.0",
-    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
